# pulsar-dreamcast-ble

./: .gitattributes  .gitignore  .gitmodules  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  Embed.toml  README.md  check.sh  dreamcast_ble_adapter_project.md  memory.x
.cargo/: config.toml
.github/workflows/: ci.yml  release.yml
3d_files/: README.md  VMU_ShellAssembly.step
3d_files/Edited_VMU_stls/: dreamcast_vmu_back.stl  dreamcast_vmu_back_cutout.stl  dreamcast_vmu_back_w_cutout.stl  dreamcast_vmu_front.stl
3d_files/blender_files/: dreamcast_vmu_back.blend  dreamcast_vmu_back2.blend  dreamcast_vmu_back3.blend  dreamcast_vmu_back4.blend  dreamcast_vmu_back4.blend1  dreamcast_vmu_back_sync.blend  dreamcast_vmu_back_sync.blend1  dreamcast_vmu_back_sync_merged.blend  dreamcast_vmu_back_sync_merged.blend1  dreamcast_vmu_back_sync_merged_wo_usb.blend  dreamcast_vmu_back_sync_merged_wo_usb.blend1  dreamcast_vmu_back_sync_merged_wo_usb_sideout.blend  dreamcast_vmu_front.blend  dreamcast_vmu_front.blend1  dreamcast_vmu_front1.blend  dreamcast_vmu_front1.blend1  dreamcast_vmu_front1_merged.blend  dreamcast_vmu_front1_merged.blend1  dreamcast_vmu_front1_merged_cutout.blend
dc-protocol/: Cargo.toml
docs/: battery_optimization.md  bill_of_materials.md  debug_log.md  dk_debug_log.md  flash-commands.md  learnings.md  maple_bus_protocol.md  pin_mapping.md  test_plan.md  users_guide.md  xiao_debug_log.md
examples/: blinky.rs  maple_device_info.rs
maple-protocol/: Cargo.toml
scripts/: ci.sh
src/: button.rs  lib.rs  main.rs  maple.rs  panic_handler.rs
src/ble/: gatt.rs  (+6 more)
(+23 files in other folders)
